java backend: address review — dedup, alias/optional lowering, Tristate invariant
CodeRabbit review on #56:

- models: allocate collision-free type names *per package* (a DeclId→name map)
  used for both filenames and references — Java is one type per file, so two
  decls in a module normalizing to the same PascalCase name (`displayName` /
  `display_name`) would have silently overwritten one another. Latent on the
  real spec (900 unique paths) but a real robustness gap.
- models: resolve a top-level alias at the field boundary *before* classifying
  optionality, so a field typed as an alias to `Optional<T>` / `Optional<
  Nullable<T>>` keeps its wrapper instead of collapsing to the bare type.
- models: `Optional<Binary>` now lowers to `Optional<byte[]>` (a valid generic
  arg), preserving the absence marker instead of collapsing to plain `byte[]`.
- lib: the generated `Tristate<T>` gains a compact constructor enforcing its
  state/value contract (PRESENT carries a value; ABSENT/NULL don't) so later
  serialization can rely on it.
- gate: compile with `javac --release 21` so the VR-1.6 gate enforces the
  documented compatibility floor regardless of host JDK (CI runs it under the
  Corretto 26 ship toolchain); drop an unnecessary `Box::leak` in the test.
- docs: PROGRESS separates the implemented model layer from the deferred
  Java-26 runtime features (dropping the stale "no engine code yet" wording).

New regression tests cover per-module name collisions, alias→Optional/tri-state,
and optional binary. cargo test --workspace, clippy, and fmt clean.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_016kjN3CzbXhJrnUmUHJJqpW